--- a/index.html
+++ b/index.html
@@ -224,7 +224,11 @@
         }
       }
       @media (max-width: 992px) {
+        .user-details .input-box input {
+          width: 95%;
+        }
         .grid {
+          margin: auto;
           width: 95%;
         }
         .grid .img h2 {
