--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         .grid {
           width: 95%;
           display: block;
-          height: 1400px !important;
+          height: 1650px !important;
           margin: 50px auto !important;
         }
         .grid .img {
@@ -209,6 +209,9 @@
           padding-top: 550px;
           width: 95%;
           font-size: 32px;
+        }
+        form {
+          padding-top: 25px;
         }
 
         form .user-details .input-box {
