--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
         letter-spacing: 1px;
       }
       @media (max-width: 576px) {
+        .grid {
+          display: block;
+          height: 1400px !important;
+        }
+        .grid .img {
+          height: 500px !important;
+        }
         .grid .img h2 {
           padding-top: 15px !important;
           font-size: 28px !important;
@@ -197,7 +204,7 @@
         .grid {
           width: 95%;
           display: block;
-          height: 1650px !important;
+          height: 1650px;
           margin: 50px auto !important;
         }
         .grid .img {
